# Siphon

./: .gitignore  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/Web/image/www/: index.html  style.css
src-tauri/src/: lib.rs  main.rs
